--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rambler UI</title>
+    <title>Ratio — дизайн-система нового Рамблера</title>
+    <meta name="description" content="Гайдлайны и компоненты для работы с интерфейсами">
+    <meta property="og:title" content="Ratio — дизайн-система нового Рамблера">
+    <meta property="og:description" content="Гайдлайны и компоненты для работы с интерфейсами">
+    <meta property="og:url" content="https://ratio.rambler.ru/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="./share-ratio.png">
+    <meta name="twitter:image" content="./share-ratio.png">
   </head>
   <body>
     <div role="application" id="root"></div>
