--- a/static/index.html
+++ b/static/index.html
@@ -9,8 +9,8 @@
     <meta property="og:description" content="Гайдлайны и компоненты для работы с интерфейсами">
     <meta property="og:url" content="https://ratio.rambler.ru/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="./share-ratio.png">
-    <meta name="twitter:image" content="./share-ratio.png">
+    <meta property="og:image" content="https://store.rambler.ru/rambler-ui/v3.30.2/share-ratio.png">
+    <meta name="twitter:image" content="https://store.rambler.ru/rambler-ui/v3.30.2/share-ratio.png">
   </head>
   <body>
     <div role="application" id="root"></div>
